--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "react-scripts start",
+    "server": "node ./bin/www",
     "test": "jest"
   },
   "jest": {
